--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "express": "3.0.1",
     "jade": "*",
     "less-middleware": "*"
+  },  
+  "engines": {
+    "node": "0.8.x",
+    "npm":  "1.1.x"
   }
 }
