--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "express": "3.0.1",
-    "jade": "*",
-    "less-middleware": "*"
-  },  
+    "jade": "0.31.1",
+    "less-middleware": "0.1.11"
+  },
   "engines": {
     "node": "0.8.x",
     "npm":  "1.1.x"
