--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "less-middleware": "0.1.11"
   },
   "engines": {
-    "node": "0.8.x",
-    "npm":  "1.1.x"
+    "node": "0.10.25",
+    "npm":  "1.4.21"
   }
 }
